# atmega128

./: .gitignore  CMakeLists.txt  README.md
avr8-gnu-toolchain-linux_x86_64/lib/gcc/avr/7.3.0/plugin/: gtype.state  libcc1plugin.la  libcc1plugin.so.0.0.0  libcp1plugin.la  libcp1plugin.so.0.0.0
avr8-gnu-toolchain-linux_x86_64/lib/gcc/avr/7.3.0/plugin/include/: auto-host.h  configargs.h  tm-preds.h
avr8-gnu-toolchain-linux_x86_64/lib64/: libcc1.so.0.0.0
avr8-gnu-toolchain-linux_x86_64/libexec/gcc/avr/7.3.0/: collect2  liblto_plugin.la  liblto_plugin.so.0.0.0  lto-wrapper
avr8-gnu-toolchain-linux_x86_64/libexec/gcc/avr/7.3.0/install-tools/: fixincl  mkheaders
avr8-gnu-toolchain-linux_x86_64/libexec/gcc/avr/7.3.0/plugin/: gengtype
src/: main.c
